compiler/testData/diagnostics/tests/secondaryConstructors/constructorInTrait.kt
interface A {
    <!CONSTRUCTOR_IN_INTERFACE!>constructor()<!>
}